--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<div class="container">
 					<header class="major">
 						<h2>Welcome!</h2>
-						<p>I am a dedicated and motivated student seeking an internship to further progress my skills and gain real-world experience in the field of statistics and data science.
+						<p>I am a dedicated and motivated student seeking to further progress my skills and gain real-world experience in the field of statistics and data science.
 							<br /></p>
 					</header>
 					<p></p>
@@ -57,14 +57,14 @@
 			<section id="two">
 				<div class="container">
 					<h3>About Me</h3>
-					<p>I am currently a junior at Indiana University pursuing a Bachelor of Science degree in Statistics, with minors in Biology and Mathematics.</p>
+					<p>I am currently a junior at Indiana University pursuing a Bachelor of Science degree in Statistics, with minors in Biology and Mathematics. </p>
 					<ul class="feature-icons">
-						<li class="fa-code">Experience working with R, Java, Python, HTML/CSS, and LaTeX</li>
-						<li class="fa-binoculars"><a href="http://www.indiana.edu/~krosvlab/"> Rosvall Lab Volunteer </a></li>
+						<li class="fa-code">Experience working with R, Java, Python, and SQL </li>
+						<li class="fa-binoculars"><a href="http://www.indiana.edu/~krosvlab/"> Rosvall Lab Employee </a></li>
 						<li class="fa-book">Undergraduate Teaching Instructor for Indiana University Biology Department</li>
+						<li class="fa-beer">Data analytics intern planned for summer 2018 at <a href="https://www.uplandbeer.com/"> Upland Brewing </a></li>
 						<li class="fa-music">Guitar player and vinyl enthusiast</li>
-						<li class="fa-bolt">Arduino, Raspberry Pi, and 3D printing tinkerer </li>
-						<li class="fa-bicycle">Cyclist and rock climber</li>
+						<li class="fa-child">Participant in <a href="http://donate.rileykids.org/site/TR?px=1420805&fr_id=3669&pg=personal"> Indiana University Dance Marathon </a> </li>
 					</ul>
 				</div>
 			</section>
@@ -85,18 +85,18 @@
 						</article>
 
 						<article>
-							<a href="./midi.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
+							<a href="./nestboxplotter.html" class="image"><img src="images/ex1.jpg" alt="" /></a>
 							<div class="inner">
-								<h4>Mini Midi Madness</h4>
-								<p> I am currently in the process of building a miniature midi Arduino keyboard. The creation will be documented and updated here as the project progresses!</p>
+								<h4>Monitoring Bird Nest Activity </h4>
+								<p>I wrote an R program that visualizes raw data collected from the Rosvall Lab</p>
 							</div>
 						</article>
 
 						<article>
 							<a href="./paper_circuit.html" class="image"><img src="images/p2.JPG" alt="" /></a>
 							<div class="inner">
-								<h4>Electronics in the Classroom</h4>
-								<p>A collection of great classroom activities about learning the basics of circuitry and electronics.</p>
+								<h4>Making for Good Portfolio</h4>
+								<p>A collection of projects I worked on in the class Making for Good</p>
 							</div>
 						</article>
 
