--- a/paper_circuit.html
+++ b/paper_circuit.html
@@ -44,13 +44,22 @@
           <header class="major">
             <h2>Recycling Arduino Project</h2>
           </header>
-          <p class="tab">I along with two other classmates worked to create a recycling project that would incentivize the public to recylce more and educate them on proper recycling practices. This project won second place at the
+          <p class="tab">I along with two other classmates worked to create a recycling project that would incentivize the public to recycle more and educate them on proper recycling practices. This project won second place at the
             <a href="https://www.sice.indiana.edu/news/story.html?story=Spring-Projects-Research-Symposium-highlights-student-innovations">
                IU School of Informatics, Computing, and Engineering 2018 Spring Symposium.</a>
           </p>
           <p class="tab"><a href="https://www.instructables.com/member/jastoica/">Here </a> is a link to the instructable if you would like to see the step by step process.
-            <a href="https://github.com/joestoica/Making-for-Good-Final-Project/wiki"> Here </a> is the link to the wiki describing the proect.
+            <a href="https://github.com/joestoica/Making-for-Good-Final-Project/wiki"> Here </a> is the link to the wiki describing the proect. The basic idea of the project is that when weight is applied to the scale, it will light up and LED strip.
+            This strip's color correlates to how much weight is added, and displays a color. We chose to use red for when there is no weight, and green from when the goal weight is hit. When the weight is somewhere in the middle, it displays a color that
+            is calculated as a function of the weight and the color's RGB value scales from red to green.
           </p>
+          <p class="tab"> This project was very benenficial in reinforcing the skills we've learned in this class. For example, we ran into a lot of issues regarding the weight sensor. We initially bought the wrong kind of sensor, which was too flexible and not good
+            for uniform force pressing down on it. We then switched to sensors that are typically found in bathroom scales and that was much better at getting weight readings. Similarly, rigidly mounting the sensors was difficult, and we ended up 3D printing
+            a platform that bends the sensor correctly.</p>
+          <p class="tab"> Construction of the box went smoothly though, and the satisfaction of the system working correctly was very satisfying. If I were to do this project again, I would implement a button that when pressed would show the color, and turn off after
+            a set amount of time. This way, the system would not draw wasted power and be more eco-friendly.
+          </p>
+
         </div>
       </section>
 
