--- a/index.html
+++ b/index.html
@@ -1,126 +1,204 @@
 <!DOCTYPE HTML>
-
+<!--
+Astral by HTML5 UP
+html5up.net | @ajlkn
+Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 
-<head>
-	<title>Joe Stoica</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-</head>
+	<head>
+		<title>Astral by HTML5 UP</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"
+		/>
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
 
-<body>
-	<!-- Header -->
-	<section id="header">
-		<header>
-			<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-			<h1 id="logo"><a href="#">Joe Stoica</a></h1>
-			<p>Statistics Student <br> Prospective Data Scientist </p>
-		</header>
-		<nav id="nav">
-			<ul>
-				<li><a href="#one" class="active">Objective</a></li>
-				<li><a href="#two">About Me</a></li>
-				<li><a href="#three">Projects</a></li>
-				<li><a href="#four">Contact</a></li>
-			</ul>
-		</nav>
-		<footer>
-			<ul class="icons">
-				<li><a href="https://twitter.com/Joe_Stoica" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="https://www.instagram.com/joe_stoica/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-				<li><a href="https://www.linkedin.com/in/joe-stoica/" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
-				<li><a href="https://github.com/joestoica" class="icon fa-github"><span class="label">Github</span></a></li>
-			</ul>
-		</footer>
-	</section>
+	<body class="is-preload">
 
-	<!-- Wrapper -->
-	<div id="wrapper">
+		<!-- Wrapper-->
+		<div id="wrapper">
 
-		<!-- Main -->
-		<div id="main">
+			<!-- Nav -->
+			<nav id="nav">
+				<a href="#" class="icon fa-home"><span>Home</span></a>
+				<a href="#about" class="icon fa-user"><span>About Me</span></a>
+				<a href="#project" class="icon fa-bar-chart"><span>Projects</span></a>
+				<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
+			</nav>
 
-			<!-- One -->
-			<section id="one">
-				<div class="container">
-					<header class="major">
-						<h2>Welcome!</h2>
-						<p>I am a dedicated and motivated student seeking to further progress my skills and gain real-world experience in the field of statistics and data science.
-							<br /></p>
+			<!-- Main -->
+			<div id="main">
+
+				<!-- Me -->
+				<article id="home" class="panel intro">
+					<header>
+						<h1>Joe Stoica</h1>
+						<h2>Statistics Student at Indiana University</h2>
+						<p> <i>“Distinguishing the signal from the noise requires both scientific knowledge and self-knowledge: the serenity to accept the things we cannot predict, the courage to predict the things we can, and the wisdom to know the difference.” - Nate Silver </i></p>
 					</header>
-					<p></p>
-				</div>
-			</section>
+					<a href="#about" class="jumplink pic">
+					<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
+					<img src="images/me.jpg" alt="" />
+				</a>
+				</article>
 
-			<!-- Two -->
-			<section id="two">
-				<div class="container">
-					<h3>About Me</h3>
-					<p>I am currently a junior at Indiana University pursuing a Bachelor of Science degree in Statistics, with minors in Biology and Mathematics. </p>
+
+				<article id="about" class="panel">
+					<header>
+						<h2>About Me</h2>
+					</header>
+					<p class="tab">
+						I am currently a senior at Indiana University pursuing a degree in Statistics,
+						with minors in Mathematics and Biology. I enjoy exploring new data sets
+						and analyzing them using statistical methods. My primary motivation is
+						trying to uncover the underlying story that data is hiding, and to share
+						these stories in a publicly accessible and easy to understand way.
+					</p>
+
+
 					<ul class="feature-icons">
-						<li class="fa-code">Experience working with R, Java, Python, and SQL </li>
-						<li class="fa-binoculars"><a href="http://www.indiana.edu/~krosvlab/"> Rosvall Lab Employee </a></li>
-						<li class="fa-book">Undergraduate Teaching Instructor for Indiana University Biology Department</li>
-						<li class="fa-beer">Data analytics intern planned for summer 2018 at <a href="https://www.uplandbeer.com/"> Upland Brewing </a></li>
-						<li class="fa-music">Guitar player and vinyl enthusiast</li>
-						<li class="fa-child">Participant in <a href="http://donate.rileykids.org/site/TR?px=1420805&fr_id=3669&pg=personal"> Indiana University Dance Marathon </a> </li>
+						<li class="icon fa-code">
+							<ul class="icons">
+								<li> R: Used for exploratory data analysis, statistical model building, and
+									statistical diagnostics inference. </li>
+								<li> Python: Used to learn similar statistical and data visualization skills.</li>
+								<li> SQL: Used for learning the basics of querying databases.</li>
+							</ul>
+						</li>
+
+						<li class="icon fa-area-chart">
+							<p>
+								One of my main passions is creating aesthetically pleasing and informational
+								data visualizations. R is my primary tool, but I am currently learning
+								to use the Tableau dashboard software, and Adobe Illustrator and Photoshop
+								for post-processing. Check out my <a href="#"> data viz portfolio!</a>
+							</p>
+						</li>
+
+						<li class="icon fa-book">
+							Undergraduate Teaching Instructor for BIOL-L 111, taught by <a href="#"> Tara Darcy-Hall</a>.
+							I was responsible for teaching my own discussion section, holding office
+							hours, and grading various assignments.
+						</li>
+
+						<li class="icon fa-beer">2018 summer finance and operations intern at <a href="https://www.uplandbeer.com/">Upland Beer</a>.
+							I am currently analyzing product margins through the supply chain.</li>
+
+						<li class="icon fa-child">
+							Participant in <a href="http://donate.rileykids.org/site/TR?px=1420805&fr_id=3669&pg=personal"> Indiana University Dance Marathon. </a>							Feel free to read <a href="#">my blog posts </a> highlighting my experience
+							with this incredible organization!
+						</li>
+
+						<li class="icon fa-binoculars"><a href="http://www.indiana.edu/~krosvlab/"> Rosvall Lab Employee.</a>							I was responsible for aiding in data collection at our field sites, and
+							I also wrote <a href="#"> an R program</a> that visualizes tree swallow
+							activity at their nests.
+						</li>
+
 					</ul>
-				</div>
-			</section>
+				</article>
 
-			<!-- Three -->
-			<section id="three">
-				<div class="container">
-					<h3>Projects</h3>
-					<p>Listed below are some of the projects that I am currently working on. </p>
-					<div class="features">
-
-						<article>
-							<a href="./2016_elect.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
-							<div class="inner">
-								<h4>Mapping the 2016 Presidential Election </h4>
-								<p>Examining the election through mapping and other analysis</p>
+				<!-- Work -->
+				<article id="project" class="panel">
+					<header>
+						<h2>
+						Projects
+					</h2>
+					</header>
+					<p>
+						Here is my portfolio on some of the various projects I've worked on!
+					</p>
+					<section>
+						<div class="row">
+							<div class="col-4 col-6-medium col-12-small">
+								<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
 							</div>
-						</article>
-
-						<article>
-							<a href="./nestboxplotter.html" class="image"><img src="images/ex1.jpg" alt="" /></a>
-							<div class="inner">
-								<h4>Monitoring Bird Nest Activity </h4>
-								<p>I wrote an R program that visualizes raw data collected from the Rosvall Lab</p>
+							<div class="col-4 col-6-medium col-12-small">
+								<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
 							</div>
-						</article>
-
-						<article>
-							<a href="./paper_circuit.html" class="image"><img src="images/p2.JPG" alt="" /></a>
-							<div class="inner">
-								<h4>Making for Good Portfolio</h4>
-								<p>A collection of projects I worked on in the class Making for Good</p>
+							<div class="col-4 col-6-medium col-12-small">
+								<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
 							</div>
-						</article>
+							<div class="col-4 col-6-medium col-12-small">
+								<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
+							</div>
+						</div>
+					</section>
+				</article>
 
-					</div>
-				</div>
-			</section>
+				<!-- Contact -->
+				<article id="contact" class="panel">
+					<header>
+						<h2>Contact Me</h2>
+					</header>
+					<p> If you're interested in contacting me, feel free to <a href="mailto:joe.stoica@gmail.com"> shoot me an email! </a></p>
 
-			<!-- Four -->
-			<section id="four">
-				<div class="container">
-					<h3>Contact Me</h3>
-					<p>If you would like to see my resume, click <a href="./resume.pdf"> here </a>. My CV can be found by clicking <a href="./website_cv.pdf"> here. </a>
-						<br>If you would like more information, please don't hesitate to email me at joe.stoica@gmail.com!</p>
-				</div>
+					<!--<form action="#" method="post">
+				<div>
+				<div class="row">
+				<div class="col-6 col-12-medium">
+				<input type="text" name="name" placeholder="Name" />
+			</div>
+			<div class="col-6 col-12-medium">
+			<input type="text" name="email" placeholder="Email" />
+		</div>
+		<div class="col-12">
+		<input type="text" name="subject" placeholder="Subject" />
+	</div>
+	<div class="col-12">
+	<textarea name="message" placeholder="Message" rows="6"></textarea>
+</div>
+<div class="col-12">
+<input type="submit" value="Send Message" />
+</div>
+</div>
+</div>
+</form>-->
+				</article>
+
+			</div>
+
+			<!-- Footer -->
+			<div id="footer">
+				<a href="https://twitter.com/Joe_Stoica" class="icon fa-twitter"><span class="label">Twitter</span></a>
+				<a href="https://www.linkedin.com/in/joe-stoica/" class="icon fa-linkedin"><span class="label">Linkedin</span></a>
+				<a href="https://github.com/joestoica" class="icon fa-github"><span class="label">Github</span></a>
+			</div>
+
 		</div>
 
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.scrollzer.min.js"></script>
-		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
 
-</body>
+	</body>
 
 </html>
