--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<article id="home" class="panel intro">
 					<header>
 						<h1>Joe Stoica</h1>
-						<h2>Statistics Student at Indiana University</h2>
+						<h3>Statistics Student at Indiana University</h3>
 						<p> <i>“Distinguishing the signal from the noise requires both scientific knowledge and self-knowledge: the serenity to accept the things we cannot predict, the courage to predict the things we can, and the wisdom to know the difference.” - Nate Silver </i></p>
 					</header>
 					<a href="#about" class="jumplink pic">
@@ -53,14 +53,21 @@
 						these stories in a publicly accessible and easy to understand way.
 					</p>
 
-
 					<ul class="feature-icons">
 						<li class="icon fa-code">
 							<ul class="icons">
-								<li> R: Used for exploratory data analysis, statistical model building, and
-									statistical diagnostics inference. </li>
-								<li> Python: Used to learn similar statistical and data visualization skills.</li>
-								<li> SQL: Used for learning the basics of querying databases.</li>
+								<li>
+									R: Used for exploratory data analysis, statistical model building, and statistical
+									diagnostics inference.
+								</li>
+								<li> Python: Used to learn various programming concepts and data visualization
+									skills.
+								</li>
+
+								<li>
+									SQL: Used for learning the basics of querying databases.
+								</li>
+
 							</ul>
 						</li>
 
@@ -74,7 +81,7 @@
 						</li>
 
 						<li class="icon fa-book">
-							Undergraduate Teaching Instructor for BIOL-L 111, taught by <a href="#"> Tara Darcy-Hall</a>.
+							Undergraduate Teaching Instructor for BIOL-L 111, taught by <a href="https://biology.indiana.edu/about/faculty/darcy-hall-tara.html"> Tara Darcy-Hall</a>.
 							I was responsible for teaching my own discussion section, holding office
 							hours, and grading various assignments.
 						</li>
@@ -83,13 +90,15 @@
 							I am currently analyzing product margins through the supply chain.</li>
 
 						<li class="icon fa-child">
-							Participant in <a href="http://donate.rileykids.org/site/TR?px=1420805&fr_id=3669&pg=personal"> Indiana University Dance Marathon. </a>							Feel free to read <a href="#">my blog posts </a> highlighting my experience
+							Participant in <a href="http://donate.rileykids.org/site/TR?px=1420805&fr_id=3669&pg=personal"> Indiana University Dance Marathon</a>.
+							Feel free to read <a href="#">my blog posts</a> highlighting my experience
 							with this incredible organization!
 						</li>
 
-						<li class="icon fa-binoculars"><a href="http://www.indiana.edu/~krosvlab/"> Rosvall Lab Employee.</a>							I was responsible for aiding in data collection at our field sites, and
-							I also wrote <a href="#"> an R program</a> that visualizes tree swallow
-							activity at their nests.
+						<li class="icon fa-binoculars">
+							<a href="http://www.indiana.edu/~krosvlab/">Rosvall Lab Employee</a>.
+							I was responsible for aiding in data collection at our field sites, and
+							I also wrote <a href="https://github.com/joestoica/Rosvall"> an R program</a>							that visualizes tree swallow activity at their nests.
 						</li>
 
 					</ul>
@@ -99,8 +108,8 @@
 				<article id="project" class="panel">
 					<header>
 						<h2>
-						Projects
-					</h2>
+							Projects
+						</h2>
 					</header>
 					<p>
 						Here is my portfolio on some of the various projects I've worked on!
@@ -125,6 +134,8 @@
 							<div class="col-4 col-6-medium col-12-small">
 								<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
 							</div>
+
+							<!--
 							<div class="col-4 col-6-medium col-12-small">
 								<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
 							</div>
@@ -143,6 +154,7 @@
 							<div class="col-4 col-6-medium col-12-small">
 								<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
 							</div>
+						-->
 						</div>
 					</section>
 				</article>
@@ -155,22 +167,22 @@
 					<p> If you're interested in contacting me, feel free to <a href="mailto:joe.stoica@gmail.com"> shoot me an email! </a></p>
 
 					<!--<form action="#" method="post">
-				<div>
-				<div class="row">
+					<div>
+					<div class="row">
+					<div class="col-6 col-12-medium">
+					<input type="text" name="name" placeholder="Name" />
+				</div>
 				<div class="col-6 col-12-medium">
-				<input type="text" name="name" placeholder="Name" />
+				<input type="text" name="email" placeholder="Email" />
 			</div>
-			<div class="col-6 col-12-medium">
-			<input type="text" name="email" placeholder="Email" />
+			<div class="col-12">
+			<input type="text" name="subject" placeholder="Subject" />
 		</div>
 		<div class="col-12">
-		<input type="text" name="subject" placeholder="Subject" />
+		<textarea name="message" placeholder="Message" rows="6"></textarea>
 	</div>
 	<div class="col-12">
-	<textarea name="message" placeholder="Message" rows="6"></textarea>
-</div>
-<div class="col-12">
-<input type="submit" value="Send Message" />
+	<input type="submit" value="Send Message" />
 </div>
 </div>
 </div>
