Fixed CSS on about page.

--- a/index.html
+++ b/index.html
@@ -48,29 +48,40 @@
 					<p class="tab">
 						I am currently a senior at Indiana University pursuing a degree in Statistics,
 						with minors in Mathematics and Biology. I enjoy exploring new data sets
-						and analyzing them using statistical methods. My primary motivation is
-						trying to uncover the underlying story that data is hiding, and to share
-						these stories in a publicly accessible and easy to understand way.
+						and analyzing them using statistical methods. However, my primary motivation
+						is trying to uncover the underlying story that the data is hiding and
+						share these stories in a publicly accessible and easy to understand way.
 					</p>
+					<header>
+						<h2>
+						Experience
+					</h2>
+					</header>
 
+					<!--Experience List-->
 					<ul class="feature-icons">
+
+						<!--Programming-->
 						<li class="icon fa-code">
 							<ul class="icons">
 								<li>
-									R: Used for exploratory data analysis, statistical model building, and statistical
-									diagnostics inference.
-								</li>
-								<li> Python: Used to learn various programming concepts and data visualization
-									skills.
+									<strong>R</strong>: Used for exploratory data analysis, statistical
+									model building, and statistical diagnostics inference.
 								</li>
 
 								<li>
-									SQL: Used for learning the basics of querying databases.
+									<strong>Python</strong>: Used to learn various programming concepts
+									and data visualization skills.
+								</li>
+
+								<li>
+									<strong>SQL</strong>: Used for learning the basics of querying databases.
 								</li>
 
 							</ul>
 						</li>
 
+						<!--Data Viz-->
 						<li class="icon fa-area-chart">
 							<p>
 								One of my main passions is creating aesthetically pleasing and informational
@@ -80,26 +91,32 @@
 							</p>
 						</li>
 
+						<!--UTA-->
 						<li class="icon fa-book">
 							Undergraduate Teaching Instructor for BIOL-L 111, taught by <a href="https://biology.indiana.edu/about/faculty/darcy-hall-tara.html"> Tara Darcy-Hall</a>.
 							I was responsible for teaching my own discussion section, holding office
 							hours, and grading various assignments.
 						</li>
 
-						<li class="icon fa-beer">2018 summer finance and operations intern at <a href="https://www.uplandbeer.com/">Upland Beer</a>.
-							I am currently analyzing product margins through the supply chain.</li>
+						<!--Rosvall-->
+						<li class="icon fa-binoculars">
+							<a href="http://www.indiana.edu/~krosvlab/">Rosvall Lab Employee</a>.
+							I was responsible for aiding in data collection at our field sites, and
+							I also wrote <a href="https://github.com/joestoica/Rosvall">an R program</a>							that visualizes tree swallow activity at their nests.
+						</li>
 
+						<!--IUDM-->
 						<li class="icon fa-child">
 							Participant in <a href="http://donate.rileykids.org/site/TR?px=1420805&fr_id=3669&pg=personal"> Indiana University Dance Marathon</a>.
 							Feel free to read <a href="#">my blog posts</a> highlighting my experience
 							with this incredible organization!
 						</li>
 
-						<li class="icon fa-binoculars">
-							<a href="http://www.indiana.edu/~krosvlab/">Rosvall Lab Employee</a>.
-							I was responsible for aiding in data collection at our field sites, and
-							I also wrote <a href="https://github.com/joestoica/Rosvall"> an R program</a>							that visualizes tree swallow activity at their nests.
+						<!--Upland-->
+						<li class="icon fa-beer">2018 summer finance and operations intern at <a href="https://www.uplandbeer.com/">Upland Beer</a>.
+							I am currently analyzing product margins through the supply chain.
 						</li>
+
 
 					</ul>
 				</article>
