started projects page

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							<ul class="icons">
 								<li>
 									<strong>R</strong>: Used for exploratory data analysis, statistical
-									model building, and statistical diagnostics inference.
+									model building, and statistical diagnostics and inference.
 								</li>
 
 								<li>
@@ -77,7 +77,6 @@
 								<li>
 									<strong>SQL</strong>: Used for learning the basics of querying databases.
 								</li>
-
 							</ul>
 						</li>
 
@@ -116,8 +115,6 @@
 						<li class="icon fa-beer">2018 summer finance and operations intern at <a href="https://www.uplandbeer.com/">Upland Beer</a>.
 							I am currently analyzing product margins through the supply chain.
 						</li>
-
-
 					</ul>
 				</article>
 
@@ -125,53 +122,54 @@
 				<article id="project" class="panel">
 					<header>
 						<h2>
-							Projects
-						</h2>
+						Projects
+					</h2>
 					</header>
 					<p>
 						Here is my portfolio on some of the various projects I've worked on!
 					</p>
 					<section>
 						<div class="row">
+
 							<div class="col-4 col-6-medium col-12-small">
-								<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+								<a href="2016_election_map.html" class="photo"><img src="images/map2.jpg" alt=""></a>
+								<p>
+									2016 Election Map
+								</p>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
-								<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
-								<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
-								<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
-								<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
-								<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+								<a href="#" class="photo"><img src="images/week13_kable.png" alt=""></a>
+								<p>
+									Tidy Tuesday
+								</p>
 							</div>
 
-							<!--
 							<div class="col-4 col-6-medium col-12-small">
-								<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
+								<a href="#" class="photo"><img src="images/justices.png" alt=""></a>
+								<p>
+									Data Viz Portfolio
+								</p>
+							</div>
+
+							<div class="col-4 col-6-medium col-12-small">
+								<a href="#" class="photo"><img src="images/tdf_facet.png" alt=""></a>
+								<p>
+									Kaggle
+								</p>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
-								<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
+								<a href="#" class="photo"><img src="images/tdf_facet.png" alt=""></a>
+								<p>
+									Nest Box Visualization
+								</p>
 							</div>
+
 							<div class="col-4 col-6-medium col-12-small">
-								<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
+								<a href="#" class="photo"><img src="images/tdf_facet.png" alt=""></a>
+								<p>
+									Making for Good Final Project
+								</p>
 							</div>
-							<div class="col-4 col-6-medium col-12-small">
-								<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
-								<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
-								<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
-							</div>
-						-->
 						</div>
 					</section>
 				</article>
@@ -182,30 +180,7 @@
 						<h2>Contact Me</h2>
 					</header>
 					<p> If you're interested in contacting me, feel free to <a href="mailto:joe.stoica@gmail.com"> shoot me an email! </a></p>
-
-					<!--<form action="#" method="post">
-					<div>
-					<div class="row">
-					<div class="col-6 col-12-medium">
-					<input type="text" name="name" placeholder="Name" />
-				</div>
-				<div class="col-6 col-12-medium">
-				<input type="text" name="email" placeholder="Email" />
-			</div>
-			<div class="col-12">
-			<input type="text" name="subject" placeholder="Subject" />
-		</div>
-		<div class="col-12">
-		<textarea name="message" placeholder="Message" rows="6"></textarea>
-	</div>
-	<div class="col-12">
-	<input type="submit" value="Send Message" />
-</div>
-</div>
-</div>
-</form>-->
 				</article>
-
 			</div>
 
 			<!-- Footer -->
@@ -214,7 +189,6 @@
 				<a href="https://www.linkedin.com/in/joe-stoica/" class="icon fa-linkedin"><span class="label">Linkedin</span></a>
 				<a href="https://github.com/joestoica" class="icon fa-github"><span class="label">Github</span></a>
 			</div>
-
 		</div>
 
 		<!-- Scripts -->
