--- a/index.html
+++ b/index.html
@@ -171,6 +171,9 @@
 								</p>
 							</div>
 						</div>
+						<h2>Blog</h2>
+						<p>Read my blog <a href="blog/blog_homepage.html">here</a>.
+						</p>
 					</section>
 				</article>
 
