overhaul is live

--- a/index.html
+++ b/index.html
@@ -1,206 +1,197 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
+
 
 <html>
 
-	<head>
-		<title>Joe Stoica</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"
-		/>
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
+<head>
+	<meta charset="utf-8">
+	<title>
+		Joe Stoica
+	</title>
+	<link rel="stylesheet" type="text/css" href="blog.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 
-	<body class="is-preload">
+<body>
 
-		<!-- Wrapper-->
-		<div id="wrapper">
-
-			<!-- Nav -->
-			<nav id="nav">
-				<a href="#" class="icon fa-home"><span>Home</span></a>
-				<a href="#about" class="icon fa-user"><span>About Me</span></a>
-				<a href="#project" class="icon fa-bar-chart"><span>Projects</span></a>
-				<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
-			</nav>
-
-			<!-- Main -->
-			<div id="main">
-
-				<!-- Me -->
-				<article id="home" class="panel intro">
-					<header>
-						<h1>Joe Stoica</h1>
-						<h3>Statistics Student at Indiana University</h3>
-						<p> <i>“Distinguishing the signal from the noise requires both scientific knowledge and self-knowledge: the serenity to accept the things we cannot predict, the courage to predict the things we can, and the wisdom to know the difference.” - Nate Silver </i></p>
-					</header>
-					<a href="#about" class="jumplink pic">
-					<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
-					<img src="images/me.jpg" alt="" />
-				</a>
-				</article>
-
-
-				<article id="about" class="panel">
-					<header>
-						<h2>About Me</h2>
-					</header>
-					<p class="tab">
-						I am currently a senior at Indiana University pursuing a degree in Statistics,
-						with minors in Mathematics and Biology. I enjoy exploring new data sets
-						and analyzing them using statistical methods. However, my primary motivation
-						is trying to uncover the underlying story that the data is hiding and
-						share these stories in a publicly accessible and easy to understand way.
-					</p>
-					<header>
-						<h2>
-						Experience
-					</h2>
-					</header>
-
-					<!--Experience List-->
-					<ul class="feature-icons">
-
-						<!--Programming-->
-						<li class="icon fa-code">
-							<ul class="icons">
-								<li>
-									<strong>R</strong>: Used for exploratory data analysis, statistical
-									model building, and statistical diagnostics and inference.
-								</li>
-
-								<li>
-									<strong>Python</strong>: Used to learn various programming concepts
-									and data visualization skills.
-								</li>
-
-								<li>
-									<strong>SQL</strong>: Used for learning the basics of querying databases.
-								</li>
-							</ul>
-						</li>
-
-						<!--Data Viz-->
-						<li class="icon fa-area-chart">
-							<p>
-								One of my main passions is creating aesthetically pleasing and informational
-								data visualizations. R is my primary tool, but I am currently learning
-								to use the Tableau dashboard software, and Adobe Illustrator and Photoshop
-								for post-processing. Check out my <a href="#"> data viz portfolio!</a>
-							</p>
-						</li>
-
-						<!--UTA-->
-						<li class="icon fa-book">
-							Undergraduate Teaching Instructor for BIOL-L 111, taught by <a href="https://biology.indiana.edu/about/faculty/darcy-hall-tara.html"> Tara Darcy-Hall</a>.
-							I was responsible for teaching my own discussion section, holding office
-							hours, and grading various assignments.
-						</li>
-
-						<!--Rosvall-->
-						<li class="icon fa-binoculars">
-							<a href="http://www.indiana.edu/~krosvlab/">Rosvall Lab Employee</a>.
-							I was responsible for aiding in data collection at our field sites, and
-							I also wrote <a href="https://github.com/joestoica/Rosvall">an R program</a>							that visualizes tree swallow activity at their nests.
-						</li>
-
-						<!--IUDM-->
-						<li class="icon fa-child">
-							Participant in <a href="http://donate.rileykids.org/site/TR?px=1420805&fr_id=3669&pg=personal"> Indiana University Dance Marathon</a>.
-							Feel free to read <a href="#">my blog posts</a> highlighting my experience
-							with this incredible organization!
-						</li>
-
-						<!--Upland-->
-						<li class="icon fa-beer">2018 summer finance and operations intern at <a href="https://www.uplandbeer.com/">Upland Beer</a>.
-							I am currently analyzing product margins through the supply chain.
-						</li>
-					</ul>
-				</article>
-
-				<!-- Work -->
-				<article id="project" class="panel">
-					<header>
-						<h2>
-						Projects
-					</h2>
-					</header>
-					<p>
-						Here is my portfolio on some of the various projects I've worked on!
-					</p>
-					<section>
-						<div class="row">
-
-							<div class="col-4 col-6-medium col-12-small">
-								<a href="2016_election_map.html" class="photo"><img src="images/map2.jpg" alt=""></a>
-								<p>
-									2016 Election Map
-								</p>
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
-								<a href="#" class="photo"><img src="images/week13_kable.png" alt=""></a>
-								<p>
-									Tidy Tuesday
-								</p>
-							</div>
-
-							<div class="col-4 col-6-medium col-12-small">
-								<a href="#" class="photo"><img src="images/justices.png" alt=""></a>
-								<p>
-									Data Viz Portfolio
-								</p>
-							</div>
-
-							<div class="col-4 col-6-medium col-12-small">
-								<a href="#" class="photo"><img src="images/tdf_facet.png" alt=""></a>
-								<p>
-									Kaggle
-								</p>
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
-								<a href="#" class="photo"><img src="images/tdf_facet.png" alt=""></a>
-								<p>
-									Nest Box Visualization
-								</p>
-							</div>
-
-							<div class="col-4 col-6-medium col-12-small">
-								<a href="#" class="photo"><img src="images/tdf_facet.png" alt=""></a>
-								<p>
-									Making for Good Final Project
-								</p>
-							</div>
-						</div>
-						<h2>Blog</h2>
-						<p>Read my blog <a href="blog/blog_homepage.html">here</a>.
-						</p>
-					</section>
-				</article>
-
-				<!-- Contact -->
-				<article id="contact" class="panel">
-					<header>
-						<h2>Contact Me</h2>
-					</header>
-					<p> If you're interested in contacting me, feel free to <a href="mailto:joe.stoica@gmail.com"> shoot me an email! </a></p>
-				</article>
-			</div>
-
-			<!-- Footer -->
-			<div id="footer">
-				<a href="https://twitter.com/Joe_Stoica" class="icon fa-twitter"><span class="label">Twitter</span></a>
-				<a href="https://www.linkedin.com/in/joe-stoica/" class="icon fa-linkedin"><span class="label">Linkedin</span></a>
-				<a href="https://github.com/joestoica" class="icon fa-github"><span class="label">Github</span></a>
-			</div>
+	<article class="left_bar">
+		<div style="text-align: center">
+			<img src="images/me.jpg" width="100%" />
 		</div>
+		<p>
+			<nav id="nav">
+				<a href="#about"><span>About</span></a>
+				<a href="#skills"><span>Skills</span></a>
+				<a href="#exp"><span>Experience</span></a>
+				<a href="#project"><span>Portfolio</span></a>
+				<a href="#blog"><span>Blog</span></a>
+			</nav>
+		</p>
 
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
 
-	</body>
+
+	</article>
+
+	<article class="main">
+		<h1>
+			<small>
+				Hi, my name is
+				<br>
+			</small>
+			Joe Stoica
+		</h1>
+
+		<h2>
+			<u id="about">
+				About Me
+			</u>
+		</h2>
+
+		<p class="box">
+
+			I am currently a senior at Indiana University pursuing a degree in Statistics,
+			with minors in Mathematics and Biology. My passion for is trying to uncover
+			the underlying story that is hidden in the data and share these stories
+			in a publicly accessible and easy to understand way.
+
+		</p>
+
+		<h2>
+			<u id="skills">
+				My skills
+			</u>
+
+		</h2>
+
+		<ul class="box">
+
+			<!--Programming-->
+			<li>
+				<strong>
+					R:
+				</strong> Used for exploratory data analysis, statistical model building,
+				and statistical diagnostics and inference.
+			</li>
+
+			<li>
+				<strong>
+					Python:
+				</strong> Used to learn various programming concepts and data visualization
+				skills.
+			</li>
+
+			<li>
+				<strong>
+					SQL:
+				</strong> Used for learning the basics of querying databases.
+			</li>
+
+
+			<!--Data Viz-->
+			<li>
+				<strong>
+					Data Visualization
+				</strong> One of my main passions is creating aesthetically pleasing
+				and informational data visualizations. The ggplot package in R is my primary
+				tool, but I am currently learning to use D3.js for interactive web visualizations.
+				Check out my <a href="#"> data viz portfolio!</a>
+			</li>
+		</ul>
+
+		<h2>
+			<u id="exp">
+				Experience
+			</u>
+		</h2>
+
+		<ul class="box">
+
+			<!--Upland-->
+			<li>Finance and Operations Intern at
+				<a href="https://www.uplandbeer.com/">
+					Upland Brewing Company
+				</a>
+				in Bloomington, IN. I am currently analyzing product margins
+				throughout the supply chain.
+			</li>
+
+			<!--UTA-->
+			<li>
+				Undergraduate Teaching Instructor for BIOL-L 111, taught by
+				<a href="https://biology.indiana.edu/about/faculty/darcy-hall-tara.html">
+					Tara Darcy-Hall
+				</a>.
+				I was responsible for teaching my own discussion section, holding office
+				hours, and grading various assignments.
+			</li>
+
+			<!--Rosvall-->
+			<li>
+				<a href="http://www.indiana.edu/~krosvlab/">
+					Rosvall Lab Employee
+				</a>. I
+				was responsible for aiding in data collection at our field sites, and I
+				also wrote
+				<a href="https://github.com/joestoica/Rosvall">
+					an R program
+				</a>
+				that visualizes tree swallow activity at their nests.
+			</li>
+
+			<!--IUDM-->
+			<li>
+				Participant in
+				<a href="http://donate.rileykids.org/site/TR?px=1420805&fr_id=3669&pg=personal">
+					Indiana University Dance Marathon
+				</a>.
+				Feel free to read
+				<a href="#">
+					my blog posts
+				</a>
+				highlighting my experience with this incredible organization!
+			</li>
+
+
+		</ul>
+
+		<h2>
+			<u id="project">
+				My Work
+			</u>
+		</h2>
+		<p class="box">
+			<ul>
+
+				<li>
+					<a href="#">Data Vizualization Portfolio</a>
+				</li>
+
+				<li>
+
+				</li>
+
+			</ul>
+		</p>
+
+		<h2>
+			<u id="blog">
+				Blog
+			</u>
+		</h2>
+
+		<p>
+			Come check out <a href="#">my blog posts</a> where I talk about my life,
+			programming, and who knows what else!
+		</p>
+	</article>
+
+	<footer>
+		<a href="https://twitter.com/Joe_Stoica" class="fa fa-twitter"></a>
+		<a href="https://www.linkedin.com/in/joe-stoica/" class="fa fa-linkedin"></a>
+		<a href="https://github.com/joestoica" class="fa fa-github"></a>
+		<a href="mailto:joe.stoica@gmail.com" class="fa fa-envelope"></a>
+	</footer>
+
+</body>
 
 </html>
