--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-
-
 <html>
+
+<!-- Head  -->
 
 <head>
 	<meta charset="utf-8">
@@ -12,186 +12,97 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
+<!-- Body -->
+
 <body>
 
-	<article class="left_bar">
+	<!-- Aside -->
+	<aside class="left_bar">
 		<div style="text-align: center">
 			<img src="images/me.jpg" width="100%" />
 		</div>
-		<p>
-			<nav id="nav">
-				<a href="#about"><span>About</span></a>
-				<a href="#skills"><span>Skills</span></a>
-				<a href="#exp"><span>Experience</span></a>
-				<a href="#project"><span>Portfolio</span></a>
-				<a href="#blog"><span>Blog</span></a>
-			</nav>
-		</p>
+
+		<!-- Nav -->
+
+		<nav id="nav">
+			<a href="#about"><span>About</span></a>
+			<a href="#skills"><span>Skills</span></a>
+			<a href="#exp"><span>Experience</span></a>
+			<a href="#project"><span>Portfolio</span></a>
+			<a href="#misc"><span>Miscellaneous</span></a>
+		</nav>
 
 
+		<!--  Links -->
+		<ul class="links">
+			<li><a href="https://twitter.com/Joe_Stoica" class="fa fa-twitter"></a></li>
+			<li><a href="https://www.linkedin.com/in/joe-stoica/" class="fa fa-linkedin"></a></li>
+			<li><a href="https://github.com/joestoica" class="fa fa-github"></a></li>
+			<li><a href="mailto:joe.stoica@gmail.com" class="fa fa-envelope"></a></li>
+		</ul>
+	</aside>
 
-	</article>
 
 	<article class="main">
-		<h1>
-			<small>
-				Hi, my name is
-				<br>
-			</small>
-			Joe Stoica
-		</h1>
+		<h1><small>Hi, my name is<br></small> Joe Stoica</h1>
 
-		<h2>
-			<u id="about">
-				About Me
-			</u>
-		</h2>
+		<h2><u id="about">About Me</u></h2>
 
-		<p class="box">
-
-			I am currently a senior at Indiana University pursuing a degree in Statistics,
-			with minors in Mathematics and Biology. My passion for is trying to uncover
-			the underlying story that is hidden in the data and share these stories
-			in a publicly accessible and easy to understand way.
-
+		<p >
+			I am currently a senior at Indiana University pursuing a degree in Statistics, with minors in Mathematics and Biology. My passion is trying to uncover the underlying story that is hidden in the data and share these stories in a publicly accessible and
+			easy to understand way.
 		</p>
 
-		<h2>
-			<u id="skills">
-				My skills
-			</u>
+		<h2><u id="skills">My skills</u></h2>
 
-		</h2>
+		<ul >
+			<!--R-->
+			<li><strong>R:</strong> Used for exploratory data analysis, statistical model building, and statistical diagnostics and inference.</li>
 
-		<ul class="box">
+			<!--Python-->
+			<li><strong>Python:</strong> Currently taking the <a href="https://www.udemy.com/complete-python-bootcamp/learn/v4/overview"> Python Bootcamp</a> course on Udemy.com to learn the fundamental concepts of Python.</li>
 
-			<!--Programming-->
-			<li>
-				<strong>
-					R:
-				</strong> Used for exploratory data analysis, statistical model building,
-				and statistical diagnostics and inference.
-			</li>
-
-			<li>
-				<strong>
-					Python:
-				</strong> Used to learn various programming concepts and data visualization
-				skills.
-			</li>
-
-			<li>
-				<strong>
-					SQL:
-				</strong> Used for learning the basics of querying databases.
-			</li>
-
-
-			<!--Data Viz-->
-			<li>
-				<strong>
-					Data Visualization
-				</strong> One of my main passions is creating aesthetically pleasing
-				and informational data visualizations. The ggplot package in R is my primary
-				tool, but I am currently learning to use D3.js for interactive web visualizations.
-				Check out my <a href="#"> data viz portfolio!</a>
-			</li>
+			<!--SQL-->
+			<li><strong>SQL:</strong> Used for learning the basics of querying databases.</li>
 		</ul>
 
-		<h2>
-			<u id="exp">
-				Experience
-			</u>
-		</h2>
+		<!-- Experience -->
+		<h2><u id="exp">Experience</u></h2>
 
-		<ul class="box">
-
+		<ul >
 			<!--Upland-->
-			<li>Finance and Operations Intern at
-				<a href="https://www.uplandbeer.com/">
-					Upland Brewing Company
-				</a>
-				in Bloomington, IN. I am currently analyzing product margins
-				throughout the supply chain.
-			</li>
+			<li>Finance and Operations Intern at <a href="https://www.uplandbeer.com/">Upland Brewing Company</a> in Bloomington, IN. I am currently analyzing product margins throughout the supply chain.</li>
 
 			<!--UTA-->
-			<li>
-				Undergraduate Teaching Instructor for BIOL-L 111, taught by
-				<a href="https://biology.indiana.edu/about/faculty/darcy-hall-tara.html">
-					Tara Darcy-Hall
-				</a>.
-				I was responsible for teaching my own discussion section, holding office
-				hours, and grading various assignments.
-			</li>
+			<li>Undergraduate Teaching Instructor for BIOL-L 111, taught by <a href="https://biology.indiana.edu/about/faculty/darcy-hall-tara.html">Tara Darcy-Hall.</a> I was responsible for teaching my own discussion section, holding office hours, and grading various assignments.</li>
 
 			<!--Rosvall-->
-			<li>
-				<a href="http://www.indiana.edu/~krosvlab/">
-					Rosvall Lab Employee
-				</a>. I
-				was responsible for aiding in data collection at our field sites, and I
-				also wrote
-				<a href="https://github.com/joestoica/Rosvall">
-					an R program
-				</a>
-				that visualizes tree swallow activity at their nests.
-			</li>
+			<li><a href="http://www.indiana.edu/~krosvlab/">Rosvall Lab Employee.</a> I aided in data collection at our field sites, along with RFID maintenance at our bird boxes. I also wrote
+				<a href="https://github.com/joestoica/Rosvall">an R program</a> that tidies RFID data and visualizes tree swallow activity at their nests.</li>
 
-			<!--IUDM-->
-			<li>
-				Participant in
-				<a href="http://donate.rileykids.org/site/TR?px=1420805&fr_id=3669&pg=personal">
-					Indiana University Dance Marathon
-				</a>.
-				Feel free to read
-				<a href="#">
-					my blog posts
-				</a>
-				highlighting my experience with this incredible organization!
-			</li>
+				<!--IUDM-->
+				<li>Culture subcommittee chair for the Riley Development committee for <a href="http://donate.rileykids.org/site/TR?px=1420805&fr_id=3669&pg=personal">Indiana University Dance Marathon.</a></li>
+				</ul>
+
+				<h2><u id="project">My Work</u></h2>
+
+				<p >
+					<ul>
+						<li><a href="data_viz.html">Tidy Tuesday</a> submissions.</li>
+					</ul>
+				</p>
+
+				<h2><u id="misc">Misc</u></h2>
+
+				<ul>
+					<li> <a href="#">Beginner's Guide to Getting Started in R</a> </li>
+					<li> <a href="#">Themes I use for Rstudio, Juptyer Notebooks, etc</a> </li>
+					<li><a href="#">Color palettes I enjoy!</a></li>
+				</ul>
 
 
-		</ul>
+			</article>
 
-		<h2>
-			<u id="project">
-				My Work
-			</u>
-		</h2>
-		<p class="box">
-			<ul>
+		</body>
 
-				<li>
-					<a href="#">Data Vizualization Portfolio</a>
-				</li>
-
-				<li>
-
-				</li>
-
-			</ul>
-		</p>
-
-		<h2>
-			<u id="blog">
-				Blog
-			</u>
-		</h2>
-
-		<p>
-			Come check out <a href="#">my blog posts</a> where I talk about my life,
-			programming, and who knows what else!
-		</p>
-	</article>
-
-	<footer>
-		<a href="https://twitter.com/Joe_Stoica" class="fa fa-twitter"></a>
-		<a href="https://www.linkedin.com/in/joe-stoica/" class="fa fa-linkedin"></a>
-		<a href="https://github.com/joestoica" class="fa fa-github"></a>
-		<a href="mailto:joe.stoica@gmail.com" class="fa fa-envelope"></a>
-	</footer>
-
-</body>
-
-</html>
+		</html>
