--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	</aside>
 
 
-	<article class="main">
+	<main>
 		<h1><small>Hi, my name is<br></small> Joe Stoica</h1>
 
 		<h2><u id="about">About Me</u></h2>
@@ -82,27 +82,27 @@
 
 				<!--IUDM-->
 				<li>Culture subcommittee chair for the Riley Development committee for <a href="http://donate.rileykids.org/site/TR?px=1420805&fr_id=3669&pg=personal">Indiana University Dance Marathon.</a></li>
-				</ul>
+			</ul>
 
-				<h2><u id="project">My Work</u></h2>
+			<h2><u id="project">My Work</u></h2>
 
-				<p >
-					<ul>
-						<li><a href="data_viz.html">Tidy Tuesday</a> submissions.</li>
-					</ul>
-				</p>
-
-				<h2><u id="misc">Misc</u></h2>
-
+			<p >
 				<ul>
-					<li> <a href="#">Beginner's Guide to Getting Started in R</a> </li>
-					<li> <a href="#">Themes I use for Rstudio, Juptyer Notebooks, etc</a> </li>
-					<li><a href="#">Color palettes I enjoy!</a></li>
+					<li><a href="tidytuesday.html">Tidy Tuesday</a> submissions.</li>
 				</ul>
+			</p>
+
+			<h2><u id="misc">Misc</u></h2>
+
+			<ul>
+				<li> <a href="r_resources.html">R resources for beginners</a> </li>
+				<li> <a href="#">Themes I use for Rstudio, Juptyer Notebooks, etc</a> </li>
+				<li><a href="#">Color palettes I enjoy!</a></li>
+			</ul>
 
 
-			</article>
+		</main>
 
-		</body>
+	</body>
 
-		</html>
+	</html>
