--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 		<!-- Nav -->
 
 		<nav id="nav">
-			<a href="#about"><span>About</span></a>
-			<a href="#skills"><span>Skills</span></a>
-			<a href="#exp"><span>Experience</span></a>
-			<a href="#project"><span>Portfolio</span></a>
-			<a href="#misc"><span>Miscellaneous</span></a>
+			<a href="#about" class="hvr"><span>About</span></a>
+			<a href="#skills" class="hvr"><span>Skills</span></a>
+			<a href="#exp" class="hvr"><span>Experience</span></a>
+			<a href="#project" class="hvr"><span>Portfolio</span></a>
+			<a href="#misc" class="hvr"><span>Miscellaneous</span></a>
 		</nav>
 
 
@@ -96,8 +96,8 @@
 
 				<ul>
 					<li> <a href="#">Beginner's Guide to Getting Started in R</a> </li>
-					<li> <a href="#">Themes I use for Rstudio, Juptyer Notebooks, etc</a> </li>
-					<li><a href="#">Color palettes I enjoy!</a></li>
+					<li> <a href="#">(Coming soon!) Themes I use for Rstudio, Juptyer Notebooks, etc</a> </li>
+					<li><a href="#">(Coming soon!) Color palettes I enjoy!</a></li>
 				</ul>
 
 
