--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 
 		<h2><u id="about">About Me</u></h2>
 
-		<p >
+		<p>
 			I am currently a senior at Indiana University pursuing a degree in Statistics, with minors in Mathematics and Biology. My passion is trying to uncover the underlying story that is hidden in the data and share these stories in a publicly accessible and
 			easy to understand way.
 		</p>
 
 		<h2><u id="skills">My skills</u></h2>
 
-		<ul >
+		<ul>
 			<!--R-->
 			<li><strong>R:</strong> Used for exploratory data analysis, statistical model building, and statistical diagnostics and inference.</li>
 
@@ -69,7 +69,7 @@
 		<!-- Experience -->
 		<h2><u id="exp">Experience</u></h2>
 
-		<ul >
+		<ul>
 			<!--Upland-->
 			<li>Finance and Operations Intern at <a href="https://www.uplandbeer.com/">Upland Brewing Company</a> in Bloomington, IN. I am currently analyzing product margins throughout the supply chain.</li>
 
@@ -97,7 +97,7 @@
 			<ul>
 				<li> <a href="r_resources.html">R resources for beginners</a> </li>
 				<li> <a href="#">Themes I use for Rstudio, Juptyer Notebooks, etc</a> </li>
-				<li><a href="#">Color palettes I enjoy!</a></li>
+				<li><a href="palettes.html">Color palettes I enjoy!</a></li>
 			</ul>
 
 
