I always forget to pull

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<li>Finance and Operations Intern at <a href="https://www.uplandbeer.com/">Upland Brewing Company</a> in Bloomington, IN. I am currently analyzing product margins throughout the supply chain.</li>
 
 			<!--UTA-->
-			<li>Undergraduate Teaching Instructor for BIOL-L 111, taught by <a href="https://biology.indiana.edu/about/faculty/darcy-hall-tara.html">Tara Darcy-Hall.</a> I was responsible for teaching my own discussion section, holding office hours, and grading various assignments.</li>
+			<li>Undergraduate Teaching Instructor for BIOL-L 111, taught by <a href="https://biology.indiana.edu/about/faculty/darcy-hall-tara.html">Dr. Tara Darcy-Hall.</a> I was responsible for teaching my own discussion section, holding office hours, and grading various assignments.</li>
 
 			<!--Rosvall-->
 			<li><a href="http://www.indiana.edu/~krosvlab/">Rosvall Lab Employee.</a> I aided in data collection at our field sites, along with RFID maintenance at our bird boxes. I also wrote
@@ -88,22 +88,16 @@
 
 			<p >
 				<ul>
-<<<<<<< HEAD
-					<li> <a href="#">Beginner's Guide to Getting Started in R</a> </li>
-					<li> <a href="#">(Coming soon!) Themes I use for Rstudio, Juptyer Notebooks, etc</a> </li>
-					<li><a href="#">(Coming soon!) Color palettes I enjoy!</a></li>
-=======
 					<li><a href="tidytuesday.html">Tidy Tuesday</a> submissions.</li>
->>>>>>> e18a512c9c4f3c98055a67d10830f21f8d5c7e3a
 				</ul>
 			</p>
 
 			<h2><u id="misc">Misc</u></h2>
 
 			<ul>
-				<li> <a href="r_resources.html">R resources for beginners</a> </li>
-				<li> <a href="#">Themes I use for Rstudio, Juptyer Notebooks, etc</a> </li>
-				<li><a href="#">Color palettes I enjoy!</a></li>
+				<li> <a href="#">Beginner's Guide to Getting Started in R</a> </li>
+				<li> <a href="#">(Coming soon!) Themes I use for Rstudio, Juptyer Notebooks, etc</a> </li>
+				<li><a href="#">(Coming soon!) Color palettes I enjoy!</a></li>
 			</ul>
 
 
